Bug 119483 - [patch] vidcontrol(1) misses latest VESA mode (off-by-one bug)
Summary: [patch] vidcontrol(1) misses latest VESA mode (off-by-one bug)
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: 6.3-PRERELEASE
Hardware: Any Any
: Normal Affects Only Me
Assignee: Eitan Adler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-09 10:30 UTC by Dan Lukes
Modified: 2015-05-19 20:47 UTC (History)
1 user (show)

See Also:


Attachments
file.diff (478 bytes, patch)
2008-01-09 10:30 UTC, Dan Lukes
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dan Lukes 2008-01-09 10:30:01 UTC
	vidcontrol -i mode
	miss the mode 0x1ff=M_VESA_MODE_MAX in listing due off-by-one bug
	The M_VESA_MODE_MAX is latest valid mode - not the first invalid

How-To-Repeat: 	use vidcontrol -i mode on hardware which has 0x1ff mode - it will
not be listed
Comment 1 dfilter service freebsd_committer freebsd_triage 2013-05-11 14:32:45 UTC
Author: eadler
Date: Sat May 11 13:32:38 2013
New Revision: 250509
URL: http://svnweb.freebsd.org/changeset/base/250509

Log:
  The M_VESA_MODE_MAX is latest valid mode - not the first invalid.
  Permit its use in vidcontrol -i
  
  PR:		bin/119483
  Submitted by:	Dan Lukes <dan@obluda.cz>
  Arrival-Date:	Wed Jan 09 10:30:01 UTC 2008
  Reviewed by:	ed
  MFC after:	3 days

Modified:
  head/usr.sbin/vidcontrol/vidcontrol.c

Modified: head/usr.sbin/vidcontrol/vidcontrol.c
==============================================================================
--- head/usr.sbin/vidcontrol/vidcontrol.c	Sat May 11 13:21:31 2013	(r250508)
+++ head/usr.sbin/vidcontrol/vidcontrol.c	Sat May 11 13:32:38 2013	(r250509)
@@ -959,7 +959,7 @@ show_mode_info(void)
 	printf("---------------------------------------"
 	       "---------------------------------------\n");
 
-	for (mode = 0; mode < M_VESA_MODE_MAX; ++mode) {
+	for (mode = 0; mode <= M_VESA_MODE_MAX; ++mode) {
 		_info.vi_mode = mode;
 		if (ioctl(0, CONS_MODEINFO, &_info))
 			continue;
_______________________________________________
svn-src-all@freebsd.org mailing list
http://lists.freebsd.org/mailman/listinfo/svn-src-all
To unsubscribe, send any mail to "svn-src-all-unsubscribe@freebsd.org"
Comment 2 dfilter service freebsd_committer freebsd_triage 2013-05-17 01:41:05 UTC
Author: eadler
Date: Fri May 17 00:40:46 2013
New Revision: 250729
URL: http://svnweb.freebsd.org/changeset/base/250729

Log:
  MFC r250509:
  	The M_VESA_MODE_MAX is latest valid mode - not the first invalid.
  	Permit its use in vidcontrol -i
  
  PR:		bin/119483

Modified:
  stable/9/usr.sbin/vidcontrol/vidcontrol.c
Directory Properties:
  stable/9/usr.sbin/vidcontrol/   (props changed)

Modified: stable/9/usr.sbin/vidcontrol/vidcontrol.c
==============================================================================
--- stable/9/usr.sbin/vidcontrol/vidcontrol.c	Fri May 17 00:26:56 2013	(r250728)
+++ stable/9/usr.sbin/vidcontrol/vidcontrol.c	Fri May 17 00:40:46 2013	(r250729)
@@ -961,7 +961,7 @@ show_mode_info(void)
 	printf("---------------------------------------"
 	       "---------------------------------------\n");
 
-	for (mode = 0; mode < M_VESA_MODE_MAX; ++mode) {
+	for (mode = 0; mode <= M_VESA_MODE_MAX; ++mode) {
 		_info.vi_mode = mode;
 		if (ioctl(0, CONS_MODEINFO, &_info))
 			continue;
_______________________________________________
svn-src-all@freebsd.org mailing list
http://lists.freebsd.org/mailman/listinfo/svn-src-all
To unsubscribe, send any mail to "svn-src-all-unsubscribe@freebsd.org"
Comment 3 dfilter service freebsd_committer freebsd_triage 2013-05-17 01:41:09 UTC
Author: eadler
Date: Fri May 17 00:40:48 2013
New Revision: 250730
URL: http://svnweb.freebsd.org/changeset/base/250730

Log:
  MFC r250509:
  	The M_VESA_MODE_MAX is latest valid mode - not the first invalid.
  	Permit its use in vidcontrol -i
  
  PR:		bin/119483

Modified:
  stable/8/usr.sbin/vidcontrol/vidcontrol.c

Modified: stable/8/usr.sbin/vidcontrol/vidcontrol.c
==============================================================================
--- stable/8/usr.sbin/vidcontrol/vidcontrol.c	Fri May 17 00:40:46 2013	(r250729)
+++ stable/8/usr.sbin/vidcontrol/vidcontrol.c	Fri May 17 00:40:48 2013	(r250730)
@@ -961,7 +961,7 @@ show_mode_info(void)
 	printf("---------------------------------------"
 	       "---------------------------------------\n");
 
-	for (mode = 0; mode < M_VESA_MODE_MAX; ++mode) {
+	for (mode = 0; mode <= M_VESA_MODE_MAX; ++mode) {
 		_info.vi_mode = mode;
 		if (ioctl(0, CONS_MODEINFO, &_info))
 			continue;
_______________________________________________
svn-src-all@freebsd.org mailing list
http://lists.freebsd.org/mailman/listinfo/svn-src-all
To unsubscribe, send any mail to "svn-src-all-unsubscribe@freebsd.org"
Comment 4 Dan Lukes 2015-05-19 20:47:21 UTC
Already commited, never closed for unknown reason.