MFC r250509: 	The M_VESA_MODE_MAX is latest valid mode - not the first invalid. 	Permit its use in vidcontrol -i

PR:		bin/119483

Former-commit-id: 2352546a5c55d809a1ba8eb9695dbda17d6d05a3